--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "14.2.0",
     "babel-loader": "8.2.5",
+    "commitizen": "^4.2.5",
     "css-loader": "^6.2.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -51,15 +53,16 @@
     "lodash": "^4.17.21",
     "moment": "2.29.1",
     "moment-timezone": "0.5.33",
-    "uuid": "8.3.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "8.3.2"
   },
   "scripts": {
     "build": "react-scripts build",
     "test": "react-scripts test",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook -o docs-build"
+    "build-storybook": "build-storybook -o docs-build",
+    "commit": "cz"
   },
   "browserslist": {
     "production": [
@@ -72,5 +75,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
